--- a/indexAlex.html
+++ b/indexAlex.html
@@ -26,11 +26,14 @@
 
 <div data-role="content" id="drag" >
 	<h2 class='local'><span></span>Local field</h2>
-	<div class='element-list drag local action'><p><span></span>Action : call mayor </p></div>
+	<div class='element-list drag local action'><p><span></span>Action : Contact national authorities </p></div>
+	<div class='element-list drag local action'><p><span></span>Action : Monitor coordination, execution of rescue operations</div>
+	<div class='element-list drag local action'><p><span></span>Action : Provide assistance with public health and medical needs</div>
+	<div class='element-list drag local action'><p><span></span>Action : Manage and coordinate food, shelter, and first aid</p></div>
 	<h2 class='gouv'><span></span>National fiel</h2>
-	<div class='element-list drag gouv report'><p><span></span> Report : local police availability report </p></div>
-	<div class='element-list drag gouv report'><p><span></span> Report : report about on occupation of land </p></div>
-	<div class='element-list drag gouv report'><p><span></span>Action : summon the federal gouvernement </p></div>	
+	<div class='element-list drag gouv report'><p><span></span> Report : Local police availability report </p></div>
+	<div class='element-list drag gouv report'><p><span></span> Report : Report about on occupation of land </p></div>
+	<div class='element-list drag gouv report'><p><span></span>Action : Summon the federal gouvernement </p></div>	
 </div>
 
 <div id="sidePanel">
